# EXCEL

./: Copia1.xlsx  Copia2.xlsx  Copia3.xlsx  Libro1.xls  Libro2.xlsx  Libro3.xlsx  copia1.xls  main.py  pyproject.toml
