[tool.poetry]
name = "repl_python3_Dia483mayo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
openpyxl = "^3.0.7"
xlsxwriter = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
